fix unaligned layout in Platform website #5507

--- a/src/Websites/Platform/src/Bit.Websites.Platform.Web/Shared/Footer.razor.scss
+++ b/src/Websites/Platform/src/Bit.Websites.Platform.Web/Shared/Footer.razor.scss
@@ -11,7 +11,7 @@ footer {
     box-sizing: border-box;
     flex-flow: column nowrap;
     justify-content: flex-start;
-    background-color: $bit-color-background-secondary;
+    background-color: $bit-color-background-primary;
 }
 
 .footer-section {
